base/src/main/java/com/example/base/model/network/errors/ServerErrorException.kt
package com.example.base.model.network.errors

class ServerErrorException(
    val serverError: ServerError
) : Exception()
